force-app/main/default/objects/BI_Data__c/BI_Data__c.object-meta.xml
<CustomObject>
    <label>BI Data</label>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>BI Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BI Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>