force-app/main/default/objects/BI_Data__c/fields/account_score__c.field-meta.xml
<CustomField>
    <fullName>account_score__c</fullName>
    <description>MIS-1816 Field for BI GQL dashboard</description>
    <label>account_score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>