force-app/main/default/objects/BI_Data__c/fields/Account_Score_number__c.field-meta.xml
<CustomField>
    <fullName>Account_Score_number__c</fullName>
    <label>Account Score number</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>