force-app/main/default/objects/BI_Data__c/fields/Account_Scoring_Stars__c.field-meta.xml
<CustomField>
    <fullName>Account_Scoring_Stars__c</fullName>
    <label>Account Scoring Stars</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>