force-app/main/default/objects/BI_Data__c/fields/Active_Rate__c.field-meta.xml
<CustomField>
    <fullName>Active_Rate__c</fullName>
    <description>MIS-4866 - Changed field type to Number
MIS-4723</description>
    <label>Active Rate</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>