force-app/main/default/objects/BI_Data__c/fields/Analyze_Competition__c.field-meta.xml
<CustomField>
    <fullName>Analyze_Competition__c</fullName>
    <description>MIS-4656</description>
    <label>Analyze Competition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>