force-app/main/default/objects/BI_Data__c/fields/Behavioral_Rate__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Rate__c</fullName>
    <label>Behavioral Rate</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>