force-app/main/default/objects/BI_Data__c/fields/BI_Data_SFDC_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>BI_Data_SFDC_Account_Id__c</fullName>
    <description>MIS-4728</description>
    <label>BI Data - SFDC Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>