force-app/main/default/objects/BI_Data__c/fields/blba_meeting_score__c.field-meta.xml
<CustomField>
    <fullName>blba_meeting_score__c</fullName>
    <label>BLBA Meeting Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>