force-app/main/default/objects/BI_Data__c/fields/CARR__c.field-meta.xml
<CustomField>
    <fullName>CARR__c</fullName>
    <description>MIS-1391 populated by BI</description>
    <label>CARR</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>