force-app/main/default/objects/BI_Data__c/fields/Competitors_List__c.field-meta.xml
<CustomField>
    <fullName>Competitors_List__c</fullName>
    <description>MIS-4887</description>
    <label>Competitors List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>