force-app/main/default/objects/BI_Data__c/fields/CSA_Engaged_Account__c.field-meta.xml
<CustomField>
    <fullName>CSA_Engaged_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-2021</description>
    <label>CSA Engaged Account</label>
    <type>Checkbox</type>
</CustomField>