force-app/main/default/objects/BI_Data__c/fields/Current_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Product__c</fullName>
    <label>Current Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>