force-app/main/default/objects/BI_Data__c/fields/Current_Product_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Current_Product_Timestamp__c</fullName>
    <label>Current Product Timestamp</label>
    <type>DateTime</type>
</CustomField>