force-app/main/default/objects/BI_Data__c/fields/Custom_Categories_First_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Categories_First_Created_Date__c</fullName>
    <label>Custom Categories First Created Date</label>
    <type>DateTime</type>
</CustomField>