force-app/main/default/objects/BI_Data__c/fields/Custom_Categories_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Categories_Last_Used_Date__c</fullName>
    <label>Custom Categories Last Used Date</label>
    <type>DateTime</type>
</CustomField>