force-app/main/default/objects/BI_Data__c/fields/Custom_Keyword_Groups__c.field-meta.xml
<CustomField>
    <fullName>Custom_Keyword_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Keyword Groups</label>
    <type>Checkbox</type>
</CustomField>