force-app/main/default/objects/BI_Data__c/fields/Custom_Keyword_Groups_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Keyword_Groups_Last_Used_Date__c</fullName>
    <label>Custom Keyword Groups Last Used Date</label>
    <type>DateTime</type>
</CustomField>