force-app/main/default/objects/BI_Data__c/fields/CustomCategories__c.field-meta.xml
<CustomField>
    <fullName>CustomCategories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomCategories</label>
    <type>Checkbox</type>
</CustomField>