force-app/main/default/objects/BI_Data__c/fields/CustomDashboards__c.field-meta.xml
<CustomField>
    <fullName>CustomDashboards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CustomDashboards</label>
    <type>Checkbox</type>
</CustomField>