force-app/main/default/objects/BI_Data__c/fields/Data_Out_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Out_Score__c</fullName>
    <description>MIS-4723</description>
    <label>Data Out Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>