force-app/main/default/objects/BI_Data__c/fields/Date_id__c.field-meta.xml
<CustomField>
    <fullName>Date_id__c</fullName>
    <label>Date id</label>
    <type>DateTime</type>
</CustomField>