force-app/main/default/objects/BI_Data__c/fields/Department_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Department_Calculated__c</fullName>
    <description>MIS-4320</description>
    <label>Department - Calculated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>