force-app/main/default/objects/BI_Data__c/fields/Department_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Department_Prediction__c</fullName>
    <description>MIS-4488</description>
    <label>Department Prediction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>