force-app/main/default/objects/BI_Data__c/fields/Depth_Score__c.field-meta.xml
<CustomField>
    <fullName>Depth_Score__c</fullName>
    <description>MIS-4723</description>
    <label>Depth Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>