force-app/main/default/objects/BI_Data__c/fields/Engaged__c.field-meta.xml
<CustomField>
    <fullName>Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated according to the business parameters for &quot;Engaged&quot; Contacts - BD-4801</description>
    <label>Engaged</label>
    <type>Checkbox</type>
</CustomField>