force-app/main/default/objects/BI_Data__c/fields/estimated_to_close_by_close_date__c.field-meta.xml
<CustomField>
    <fullName>estimated_to_close_by_close_date__c</fullName>
    <label>Estimated to close by close date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>