force-app/main/default/objects/BI_Data__c/fields/Excel_Download_Monthly_Usage__c.field-meta.xml
<CustomField>
    <fullName>Excel_Download_Monthly_Usage__c</fullName>
    <label>Excel_Download_Monthly_Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>