force-app/main/default/objects/BI_Data__c/fields/Find_Relevant_Leads__c.field-meta.xml
<CustomField>
    <fullName>Find_Relevant_Leads__c</fullName>
    <label>Find Relevant Leads</label>
    <length>255</length>
    <type>Text</type>
</CustomField>