force-app/main/default/objects/BI_Data__c/fields/First_Intent_Threshold_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_Intent_Threshold_Timestamp__c</fullName>
    <description>MIS-4323</description>
    <label>First Intent Threshold Timestamp</label>
    <type>DateTime</type>
</CustomField>