force-app/main/default/objects/BI_Data__c/fields/First_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Login_Date__c</fullName>
    <label>First Login Date</label>
    <type>Date</type>
</CustomField>