force-app/main/default/objects/BI_Data__c/fields/First_MQL2_Date__c.field-meta.xml
<CustomField>
    <fullName>First_MQL2_Date__c</fullName>
    <label>First MQL2 Date</label>
    <type>DateTime</type>
</CustomField>