force-app/main/default/objects/BI_Data__c/fields/First_No_Touch_Pro_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_No_Touch_Pro_Purchase_Date__c</fullName>
    <label>First No Touch Pro Purchase Date</label>
    <type>DateTime</type>
</CustomField>