force-app/main/default/objects/BI_Data__c/fields/First_Touch_Pro_End_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Pro_End_Date__c</fullName>
    <description>MIS-4027</description>
    <label>First Touch Pro End Date</label>
    <type>Date</type>
</CustomField>