force-app/main/default/objects/BI_Data__c/fields/First_touch_pro_purchase_date__c.field-meta.xml
<CustomField>
    <fullName>First_touch_pro_purchase_date__c</fullName>
    <description>MIS-1112</description>
    <label>First touch pro purchase date</label>
    <type>Date</type>
</CustomField>