force-app/main/default/objects/BI_Data__c/fields/FIT_Label2__c.field-meta.xml
<CustomField>
    <fullName>FIT_Label2__c</fullName>
    <label>FIT Label2</label>
    <length>1</length>
    <type>Text</type>
</CustomField>