force-app/main/default/objects/BI_Data__c/fields/FIT_Score2__c.field-meta.xml
<CustomField>
    <fullName>FIT_Score2__c</fullName>
    <label>FIT Score2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>