force-app/main/default/objects/BI_Data__c/fields/Fit_Score_2_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_2_Last_Update__c</fullName>
    <label>Fit Score 2 Last Update</label>
    <type>DateTime</type>
</CustomField>