force-app/main/default/objects/BI_Data__c/fields/Free_digital_rank_api_currentmonth__c.field-meta.xml
<CustomField>
    <fullName>Free_digital_rank_api_currentmonth__c</fullName>
    <description>MIS-3804</description>
    <label>Free digital rank api currentmonth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>