force-app/main/default/objects/BI_Data__c/fields/Free_digital_rank_api_usertype__c.field-meta.xml
<CustomField>
    <fullName>Free_digital_rank_api_usertype__c</fullName>
    <description>MIS-3804</description>
    <label>Free digital rank api usertype</label>
    <length>100</length>
    <type>Text</type>
</CustomField>