force-app/main/default/objects/BI_Data__c/fields/health_score_color__c.field-meta.xml
<CustomField>
    <fullName>health_score_color__c</fullName>
    <label>health_score_color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>