force-app/main/default/objects/BI_Data__c/fields/High_User_Engagement__c.field-meta.xml
<CustomField>
    <fullName>High_User_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pull from &quot;behavior_share&quot; field in BI</description>
    <inlineHelpText>Above average # of contacts, MQL&apos;s, and CU&apos;s</inlineHelpText>
    <label>High User Engagement</label>
    <type>Checkbox</type>
</CustomField>