force-app/main/default/objects/BI_Data__c/fields/Honeymoon_Activation__c.field-meta.xml
<CustomField>
    <fullName>Honeymoon_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-5297</description>
    <label>Honeymoon Activation</label>
    <type>Checkbox</type>
</CustomField>