force-app/main/default/objects/BI_Data__c/fields/intent_first_low_date__c.field-meta.xml
<CustomField>
    <fullName>intent_first_low_date__c</fullName>
    <defaultValue>DATETIMEVALUE(&quot;2100-01-01 00:00:00&quot;)</defaultValue>
    <description>First date the user became &quot;low&quot; in behavioral score</description>
    <label>intent_first_low_date</label>
    <type>DateTime</type>
</CustomField>