force-app/main/default/objects/BI_Data__c/fields/intent_is_trial__c.field-meta.xml
<CustomField>
    <fullName>intent_is_trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Had trial or not</description>
    <label>intent_is_trial</label>
    <type>Checkbox</type>
</CustomField>