force-app/main/default/objects/BI_Data__c/fields/intent_last_update_date__c.field-meta.xml
<CustomField>
    <fullName>intent_last_update_date__c</fullName>
    <defaultValue>DATETIMEVALUE(&quot;2100-01-01 00:00:00&quot;)</defaultValue>
    <description>Data update date</description>
    <label>intent_last_update_date</label>
    <type>DateTime</type>
</CustomField>