force-app/main/default/objects/BI_Data__c/fields/Intent_Log_Ins__c.field-meta.xml
<CustomField>
    <fullName>Intent_Log_Ins__c</fullName>
    <description>MIS-5713</description>
    <label>Intent Log Ins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>