force-app/main/default/objects/BI_Data__c/fields/Intent_Minisite_Section_Visits__c.field-meta.xml
<CustomField>
    <fullName>Intent_Minisite_Section_Visits__c</fullName>
    <description>MIS-5713</description>
    <label>Intent Minisite Section Visits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>