force-app/main/default/objects/BI_Data__c/fields/intent_num_of_asset_view__c.field-meta.xml
<CustomField>
    <fullName>intent_num_of_asset_view__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of assets the user viewed in trial</description>
    <label>intent_num_of_asset_view</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>