force-app/main/default/objects/BI_Data__c/fields/intent_num_of_content_downloads__c.field-meta.xml
<CustomField>
    <fullName>intent_num_of_content_downloads__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of content assets the user downloaded</description>
    <label>intent_num_of_content_downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>