force-app/main/default/objects/BI_Data__c/fields/intent_num_of_dashboards__c.field-meta.xml
<CustomField>
    <fullName>intent_num_of_dashboards__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of dashboards the user created in trial</description>
    <label>intent_num_of_dashboards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>