force-app/main/default/objects/BI_Data__c/fields/intent_num_of_hr_calendar__c.field-meta.xml
<CustomField>
    <fullName>intent_num_of_hr_calendar__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of handraises of type calendar automation the user did</description>
    <label>intent_num_of_hr_calendar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>