force-app/main/default/objects/BI_Data__c/fields/intent_num_of_minisites_visits__c.field-meta.xml
<CustomField>
    <fullName>intent_num_of_minisites_visits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of visits to the minisites</description>
    <label>intent_num_of_minisites_visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>