force-app/main/default/objects/BI_Data__c/fields/Intent_Num_of_Premium_Features_Visits__c.field-meta.xml
<CustomField>
    <fullName>Intent_Num_of_Premium_Features_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MIS-6013</description>
    <label>Intent Num of Premium Features Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>