force-app/main/default/objects/BI_Data__c/fields/intent_num_of_pro_actions__c.field-meta.xml
<CustomField>
    <fullName>intent_num_of_pro_actions__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of actions in the pro</description>
    <label>intent_num_of_pro_actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>