force-app/main/default/objects/BI_Data__c/fields/intent_num_of_sfmc_opens__c.field-meta.xml
<CustomField>
    <fullName>intent_num_of_sfmc_opens__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times the user opened a marketing cloud email</description>
    <label>intent_num_of_sfmc_opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>