force-app/main/default/objects/BI_Data__c/fields/intent_num_of_web_category__c.field-meta.xml
<CustomField>
    <fullName>intent_num_of_web_category__c</fullName>
    <label>intent num of web category</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>