force-app/main/default/objects/BI_Data__c/fields/intent_num_of_webinar_participation__c.field-meta.xml
<CustomField>
    <fullName>intent_num_of_webinar_participation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of webinars the userd had participated in</description>
    <label>intent_num_of_webinar_participation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>