force-app/main/default/objects/BI_Data__c/fields/Intent_Pricing_Visits_Dates__c.field-meta.xml
<CustomField>
    <fullName>Intent_Pricing_Visits_Dates__c</fullName>
    <description>MIS-5713</description>
    <label>Intent Pricing Visits Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>