force-app/main/default/objects/BI_Data__c/fields/Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MIS-4061</description>
    <label>Intent Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>