force-app/main/default/objects/BI_Data__c/fields/Intent_Score_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Last_Updated_Date__c</fullName>
    <description>MIS-4061</description>
    <label>Intent Score - Last Updated Date</label>
    <type>Date</type>
</CustomField>