force-app/main/default/objects/BI_Data__c/fields/Intent_Score_Last_Updated_Date_Up__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Last_Updated_Date_Up__c</fullName>
    <description>MIS-4323</description>
    <label>Intent Score - Last Updated Date Up</label>
    <type>DateTime</type>
</CustomField>