force-app/main/default/objects/BI_Data__c/fields/Intent_Score_Reason__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score_Reason__c</fullName>
    <description>MIS-4061</description>
    <label>Intent Score - Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>