force-app/main/default/objects/BI_Data__c/fields/intent_score_tier__c.field-meta.xml
<CustomField>
    <fullName>intent_score_tier__c</fullName>
    <defaultValue>&apos;Low&apos;</defaultValue>
    <description>High/Medium/Low usage</description>
    <label>intent_score_tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>