force-app/main/default/objects/BI_Data__c/fields/Intent_Trial_Section_and_Sub__c.field-meta.xml
<CustomField>
    <fullName>Intent_Trial_Section_and_Sub__c</fullName>
    <description>MIS-5713</description>
    <label>Intent Trial Section and Sub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>