force-app/main/default/objects/BI_Data__c/fields/Is_AS_DF__c.field-meta.xml
<CustomField>
    <fullName>Is_AS_DF__c</fullName>
    <description>MIS-4723</description>
    <label>Is AS DF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>